Login/signup complete

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,3 +1,30 @@
-.logo{
-    font-size: 25px;
+.nav {
+    display: flex;
+    flex-wrap: wrap;
+    background: black;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    height: 8vh;
+    color: white;
+}
+.login{
+    cursor: pointer;
+    margin: 13px;
+}
+.signup{
+    margin: 13px;
+    cursor: pointer;
+}
+a{
+    color: white;
+}
+a:hover{
+    border-bottom: 0;
+    color: white;
+    text-decoration: none
+}
+
+.heading{
+    margin: 10px;
 }
