--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import './header';
 @import './login';
+@import './profile';
 
 html {
   box-sizing: border-box;
