--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -11,11 +11,11 @@
             outline: none;
             width: 100%;
             border: 1px solid grey;
-            padding: 8px 10px;
-            margin: 0;
-            &:nth-child(1){
-                border-bottom: 0;
-            }
+            padding: 14px 10px;
+            margin: 10px;
+            border-radius: 2px;
+            font-size: 14px;
+            font-weight: 600;
         }
         button{
             border: 1px solid grey;
@@ -23,7 +23,9 @@
             color: #000;
             transition: .6s;
             outline: none;
-            width: 40%;
+            width: 50%;
+            font-size: 12px;
+            font-weight: 600;
             padding: 10px 25px;
             margin: 10px 0;
             box-shadow: 0 0 2px 0 rgba(128,128,128,0.6);
@@ -35,16 +37,5 @@
                 box-shadow: 0 2px 1px 0 rgba(128,128,128,0.6);                
             }
         }
-    }
-    .text-success{
-        display: block;
-        padding-top: 60px;
-        text-align: center;
-        opacity: 1;
-        transition: .6s ease;
-    }
-    .none{
-        transition: .6s ease;
-        opacity: 0 !important;
     }
 }
