profile with blog post

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,7 +5,7 @@
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
-    height: 8vh;
+    height: 60px;
     color: white;
 }
 .login{
