--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -38,4 +38,18 @@
             }
         }
     }
+    .or{
+        display: inline-block;
+        font-size: 20px;
+        font-weight: 600;
+    }
+    .links{
+        color: black;
+        font-size: 20px;
+        margin-left: 10px;
+        font-weight: 600;
+    }
+    .links:hover {
+        text-decoration: underline;
+    }
 }
