--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -2,3 +2,20 @@
     text-align: center;
     margin-top: 8vh;
 }
+.box{
+    margin-top: 20px;
+	width:100%;
+    border:1px solid rgba(80,80,80,0.4);
+    border-radius: 2px;
+    box-shadow: 5px 5px 3px rgba(80,80,80,0.6);
+}
+.head{
+    font-size: 16px;
+    background: rgba(80,80,80,0.1);
+    border-bottom:1px solid;
+    padding: 5px;
+}
+.post{
+    font-size: 13px;
+    padding: 10px;
+}
