--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -11,6 +11,7 @@
 }
 .head{
     font-size: 16px;
+    font-weight: 600;
     background: rgba(80,80,80,0.1);
     border-bottom:1px solid;
     padding: 5px;
@@ -18,4 +19,8 @@
 .post{
     font-size: 13px;
     padding: 10px;
+}
+.post-title{
+    font-size: 14px;
+    font-weight: 600;
 }
